@@ -44,7 +44,6 @@ import org.slf4j.Logger;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -85,7 +84,7 @@ public class ConfigurationControlManager {
         private Consumer<ConfigResource> existenceChecker = __ -> { };
         private Optional<AlterConfigPolicy> alterConfigPolicy = Optional.empty();
         private ConfigurationValidator validator = ConfigurationValidator.NO_OP;
-        private Map<String, Object> staticConfig = Collections.emptyMap();
+        private Map<String, Object> staticConfig = Map.of();
         private int nodeId = 0;
         private FeatureControlManager featureControl = null;
 
@@ -174,7 +173,7 @@ public class ConfigurationControlManager {
         this.validator = validator;
         this.configData = new TimelineHashMap<>(snapshotRegistry, 0);
         this.brokersWithConfigs = new TimelineHashSet<>(snapshotRegistry, 0);
-        this.staticConfig = Collections.unmodifiableMap(new HashMap<>(staticConfig));
+        this.staticConfig = Map.copyOf(staticConfig);
         this.currentController = new ConfigResource(Type.BROKER, Integer.toString(nodeId));
         this.featureControl = featureControl;
     }
@@ -217,7 +216,7 @@ public class ConfigurationControlManager {
 
     List<ApiMessageAndVersion> createClearElrRecordsAsNeeded(List<ApiMessageAndVersion> input) {
         if (!featureControl.isElrFeatureEnabled()) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<ApiMessageAndVersion> output = new ArrayList<>();
         for (ApiMessageAndVersion messageAndVersion : input) {
@@ -309,7 +308,7 @@ public class ConfigurationControlManager {
                     setValue(newValue), (short) 0));
             }
         }
-        ApiError error = validateAlterConfig(configResource, newRecords, Collections.emptyList(), newlyCreatedResource);
+        ApiError error = validateAlterConfig(configResource, newRecords, List.of(), newlyCreatedResource);
         if (error.isFailure()) {
             return error;
         }
@@ -339,6 +338,10 @@ public class ConfigurationControlManager {
                 return DISALLOWED_CLUSTER_MIN_ISR_REMOVAL_ERROR;
             } else if (configRecord.value() == null) {
                 allConfigs.remove(configRecord.name());
+            } else if (configRecord.value().length() > Short.MAX_VALUE) {
+                // In KRaft mode, large config values cannot be created by appending.
+                // If the size exceeds Short.MAX_VALUE, this error will be thrown to notify the user.
+                return DISALLOWED_CONFIG_VALUE_SIZE_ERROR;
             } else {
                 allConfigs.put(configRecord.name(), configRecord.value());
             }
@@ -384,6 +387,10 @@ public class ConfigurationControlManager {
     private static final ApiError DISALLOWED_CLUSTER_MIN_ISR_REMOVAL_ERROR =
         new ApiError(INVALID_CONFIG, "Cluster-level " + MIN_IN_SYNC_REPLICAS_CONFIG +
             " cannot be removed while ELR is enabled.");
+
+    private static final ApiError DISALLOWED_CONFIG_VALUE_SIZE_ERROR =
+        new ApiError(INVALID_CONFIG, "The configuration value cannot be added because " +
+            "it exceeds the maximum value size of " + Short.MAX_VALUE + " bytes.");
 
     boolean isDisallowedBrokerMinIsrTransition(ConfigRecord configRecord) {
         if (configRecord.name().equals(MIN_IN_SYNC_REPLICAS_CONFIG) &&
@@ -444,7 +451,7 @@ public class ConfigurationControlManager {
         List<ApiMessageAndVersion> recordsExplicitlyAltered = new ArrayList<>();
         Map<String, String> currentConfigs = configData.get(configResource);
         if (currentConfigs == null) {
-            currentConfigs = Collections.emptyMap();
+            currentConfigs = Map.of();
         }
         for (Entry<String, String> entry : newConfigs.entrySet()) {
             String key = entry.getKey();
@@ -536,7 +543,7 @@ public class ConfigurationControlManager {
     Map<String, String> getConfigs(ConfigResource configResource) {
         Map<String, String> map = configData.get(configResource);
         if (map == null) {
-            return Collections.emptyMap();
+            return Map.of();
         } else {
             return Map.copyOf(map);
         }
@@ -677,7 +684,7 @@ public class ConfigurationControlManager {
                 log.info("{}", logMessage);
             }
             records.addAll(result.records());
-            return ControllerResult.atomicOf(records, null);
+            return ControllerResult.atomicOf(records, ApiError.NONE);
         }
         return result;
     }
@@ -703,17 +710,17 @@ public class ConfigurationControlManager {
 
     Map<String, String> clusterConfig() {
         Map<String, String> result = configData.get(DEFAULT_NODE);
-        return (result == null) ? Collections.emptyMap() : result;
+        return (result == null) ? Map.of() : result;
     }
 
     Map<String, String> currentControllerConfig() {
         Map<String, String> result = configData.get(currentController);
-        return (result == null) ? Collections.emptyMap() : result;
+        return (result == null) ? Map.of() : result;
     }
 
     Map<String, String> currentTopicConfig(String topicName) {
         Map<String, String> result = configData.get(new ConfigResource(Type.TOPIC, topicName));
-        return (result == null) ? Collections.emptyMap() : result;
+        return (result == null) ? Map.of() : result;
     }
 
     // Visible to test
