@@ -31,20 +31,20 @@ import org.apache.kafka.metadata.LeaderRecoveryState;
 import org.apache.kafka.metadata.PartitionRegistration;
 import org.apache.kafka.metadata.RecordTestUtils;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
+import org.apache.kafka.server.common.MetadataVersion;
 import org.apache.kafka.server.immutable.ImmutableMap;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.apache.kafka.common.metadata.MetadataRecordType.CLEAR_ELR_RECORD;
 import static org.apache.kafka.common.metadata.MetadataRecordType.PARTITION_CHANGE_RECORD;
@@ -108,7 +108,7 @@ public class TopicsImageTest {
     private static final Uuid BAM_UUID2 = Uuid.fromString("yd6Sq3a9aK1G8snlKv7ag5");
 
     static {
-        TOPIC_IMAGES1 = Arrays.asList(
+        TOPIC_IMAGES1 = List.of(
             newTopicImage("foo", FOO_UUID,
                 new PartitionRegistration.Builder().setReplicas(new int[] {2, 3, 4}).
                     setDirectories(DirectoryId.migratingArray(3)).
@@ -144,10 +144,10 @@ public class TopicsImageTest {
         DELTA1_RECORDS.add(new ApiMessageAndVersion(new PartitionRecord().
             setPartitionId(0).
             setTopicId(BAZ_UUID).
-            setReplicas(Arrays.asList(1, 2, 3, 4)).
-            setIsr(Arrays.asList(3, 4)).
-            setRemovingReplicas(Collections.singletonList(2)).
-            setAddingReplicas(Collections.singletonList(1)).
+            setReplicas(List.of(1, 2, 3, 4)).
+            setIsr(List.of(3, 4)).
+            setRemovingReplicas(List.of(2)).
+            setAddingReplicas(List.of(1)).
             setLeader(3).
             setLeaderEpoch(2).
             setPartitionEpoch(1), PARTITION_RECORD.highestSupportedVersion()));
@@ -166,7 +166,7 @@ public class TopicsImageTest {
         DELTA1 = new TopicsDelta(IMAGE1);
         RecordTestUtils.replayAll(DELTA1, DELTA1_RECORDS);
 
-        List<TopicImage> topics2 = Arrays.asList(
+        List<TopicImage> topics2 = List.of(
             newTopicImage("foo", FOO_UUID2),
             newTopicImage("bar", BAR_UUID,
                 new PartitionRegistration.Builder().setReplicas(new int[] {0, 1, 2, 3, 4}).
@@ -227,8 +227,8 @@ public class TopicsImageTest {
                 TOPIC_RECORD.highestSupportedVersion()
             )
         );
-        topicRecords.add(newPartitionRecord(BAM_UUID2, 0, Arrays.asList(0, 1, 2)));
-        topicRecords.add(newPartitionRecord(BAM_UUID2, 1, Arrays.asList(0, 1, localId)));
+        topicRecords.add(newPartitionRecord(BAM_UUID2, 0, List.of(0, 1, 2)));
+        topicRecords.add(newPartitionRecord(BAM_UUID2, 1, List.of(0, 1, localId)));
 
         // baz-1 - new partition to follower
         topicRecords.add(
@@ -236,8 +236,8 @@ public class TopicsImageTest {
                 new PartitionRecord()
                     .setPartitionId(1)
                     .setTopicId(BAZ_UUID)
-                    .setReplicas(Arrays.asList(4, 2, localId))
-                    .setIsr(Arrays.asList(4, 2, localId))
+                    .setReplicas(List.of(4, 2, localId))
+                    .setIsr(List.of(4, 2, localId))
                     .setLeader(4)
                     .setLeaderEpoch(2)
                     .setPartitionEpoch(1),
@@ -250,16 +250,16 @@ public class TopicsImageTest {
 
         LocalReplicaChanges changes = delta.localChanges(localId);
         assertEquals(
-            new HashSet<>(Collections.singletonList(new TopicPartition("baz", 0))),
+            new HashSet<>(List.of(new TopicPartition("baz", 0))),
             changes.electedLeaders().keySet()
         );
         assertEquals(
-            new HashSet<>(Collections.singletonList(new TopicPartition("baz", 0))),
+            new HashSet<>(List.of(new TopicPartition("baz", 0))),
             changes.leaders().keySet()
         );
         assertEquals(
             new HashSet<>(
-                Arrays.asList(new TopicPartition("baz", 1), new TopicPartition("bar", 0),
+                List.of(new TopicPartition("baz", 1), new TopicPartition("bar", 0),
                     new TopicPartition("bam", 1))
             ),
             changes.followers().keySet()
@@ -306,10 +306,10 @@ public class TopicsImageTest {
         RecordTestUtils.replayAll(delta, topicRecords);
 
         LocalReplicaChanges changes = delta.localChanges(localId);
-        assertEquals(new HashSet<>(Collections.singletonList(new TopicPartition("zoo", 0))), changes.deletes());
-        assertEquals(Collections.emptyMap(), changes.electedLeaders());
-        assertEquals(Collections.emptyMap(), changes.leaders());
-        assertEquals(Collections.emptyMap(), changes.followers());
+        assertEquals(new HashSet<>(List.of(new TopicPartition("zoo", 0))), changes.deletes());
+        assertEquals(Map.of(), changes.electedLeaders());
+        assertEquals(Map.of(), changes.leaders());
+        assertEquals(Map.of(), changes.followers());
 
         TopicsImage finalImage = delta.apply();
         List<ApiMessageAndVersion> imageRecords = getImageRecords(image);
@@ -336,7 +336,7 @@ public class TopicsImageTest {
         List<ApiMessageAndVersion> topicRecords = new ArrayList<>();
         topicRecords.add(
             new ApiMessageAndVersion(
-                new PartitionChangeRecord().setTopicId(zooId).setPartitionId(0).setIsr(Arrays.asList(localId, 1)),
+                new PartitionChangeRecord().setTopicId(zooId).setPartitionId(0).setIsr(List.of(localId, 1)),
                 PARTITION_CHANGE_RECORD.highestSupportedVersion()
             )
         );
@@ -345,13 +345,13 @@ public class TopicsImageTest {
         RecordTestUtils.replayAll(delta, topicRecords);
 
         LocalReplicaChanges changes = delta.localChanges(localId);
-        assertEquals(Collections.emptySet(), changes.deletes());
-        assertEquals(Collections.emptyMap(), changes.electedLeaders());
+        assertEquals(Set.of(), changes.deletes());
+        assertEquals(Map.of(), changes.electedLeaders());
         assertEquals(
-            new HashSet<>(Collections.singletonList(new TopicPartition("zoo", 0))),
+            new HashSet<>(List.of(new TopicPartition("zoo", 0))),
             changes.leaders().keySet()
         );
-        assertEquals(Collections.emptyMap(), changes.followers());
+        assertEquals(Map.of(), changes.followers());
     }
 
     @Test
@@ -374,9 +374,9 @@ public class TopicsImageTest {
         topicRecords.add(
             new ApiMessageAndVersion(
                 new PartitionChangeRecord().setTopicId(fooId).setPartitionId(0).
-                    setIsr(Arrays.asList(0, 1)).
-                    setEligibleLeaderReplicas(Arrays.asList(2)).
-                    setLastKnownElr(Arrays.asList(3)),
+                    setIsr(List.of(0, 1)).
+                    setEligibleLeaderReplicas(List.of(2)).
+                    setLastKnownElr(List.of(3)),
                 PARTITION_CHANGE_RECORD.highestSupportedVersion()
             )
         );
@@ -394,7 +394,7 @@ public class TopicsImageTest {
         1. The clear elr record should work on all existing topics(foo).
         2. The clear elr record should work on the new topic(bar) in the same batch.
         */
-        topicRecords.addAll(Arrays.asList(
+        topicRecords.addAll(List.of(
             new ApiMessageAndVersion(
                 new TopicRecord().setTopicId(barId).
                     setName("bar"),
@@ -404,9 +404,9 @@ public class TopicsImageTest {
                 new PartitionRecord().setTopicId(barId).
                     setPartitionId(0).
                     setLeader(0).
-                    setIsr(Arrays.asList(1)).
-                    setEligibleLeaderReplicas(Arrays.asList(2)).
-                    setLastKnownElr(Arrays.asList(3)),
+                    setIsr(List.of(1)).
+                    setEligibleLeaderReplicas(List.of(2)).
+                    setLastKnownElr(List.of(3)),
                 PARTITION_RECORD.highestSupportedVersion()
             ),
             new ApiMessageAndVersion(
@@ -430,11 +430,11 @@ public class TopicsImageTest {
 
     @Test
     public void testClearElrRecordForNonExistTopic() {
-        TopicsImage image = new TopicsImage(newTopicsByIdMap(Collections.emptyList()),
-            newTopicsByNameMap(Collections.emptyList()));
+        TopicsImage image = new TopicsImage(newTopicsByIdMap(List.of()),
+            newTopicsByNameMap(List.of()));
         TopicsDelta delta = new TopicsDelta(image);
         List<ApiMessageAndVersion> topicRecords = new ArrayList<>();
-        topicRecords.addAll(Collections.singletonList(
+        topicRecords.addAll(List.of(
             new ApiMessageAndVersion(
                 new ClearElrRecord().setTopicName("non-exist"),
                 CLEAR_ELR_RECORD.highestSupportedVersion()
@@ -484,8 +484,8 @@ public class TopicsImageTest {
                 new PartitionChangeRecord()
                   .setTopicId(zooId)
                   .setPartitionId(2)
-                  .setIsr(Arrays.asList(0, 1, 2))
-                  .setReplicas(Arrays.asList(0, 1, 2)),
+                  .setIsr(List.of(0, 1, 2))
+                  .setReplicas(List.of(0, 1, 2)),
                 PARTITION_CHANGE_RECORD.highestSupportedVersion()
             )
         );
@@ -496,8 +496,8 @@ public class TopicsImageTest {
                   .setTopicId(zooId)
                   .setPartitionId(3)
                   .setLeader(0)
-                  .setIsr(Arrays.asList(0, 1, 2))
-                  .setReplicas(Arrays.asList(0, 1, 2)),
+                  .setIsr(List.of(0, 1, 2))
+                  .setReplicas(List.of(0, 1, 2)),
                 PARTITION_CHANGE_RECORD.highestSupportedVersion()
             )
         );
@@ -508,8 +508,8 @@ public class TopicsImageTest {
                   .setTopicId(zooId)
                   .setPartitionId(4)
                   .setLeader(localId)
-                  .setIsr(Arrays.asList(localId, 1, 2))
-                  .setReplicas(Arrays.asList(localId, 1, 2)),
+                  .setIsr(List.of(localId, 1, 2))
+                  .setReplicas(List.of(localId, 1, 2)),
                 PARTITION_CHANGE_RECORD.highestSupportedVersion()
             )
         );
@@ -519,8 +519,8 @@ public class TopicsImageTest {
                 new PartitionChangeRecord()
                   .setTopicId(zooId)
                   .setPartitionId(5)
-                  .setIsr(Arrays.asList(0, 1, localId))
-                  .setReplicas(Arrays.asList(0, 1, localId)),
+                  .setIsr(List.of(0, 1, localId))
+                  .setReplicas(List.of(0, 1, localId)),
                 PARTITION_CHANGE_RECORD.highestSupportedVersion()
             )
         );
@@ -530,19 +530,19 @@ public class TopicsImageTest {
 
         LocalReplicaChanges changes = delta.localChanges(localId);
         assertEquals(
-            new HashSet<>(Arrays.asList(new TopicPartition("zoo", 2), new TopicPartition("zoo", 3))),
+            new HashSet<>(List.of(new TopicPartition("zoo", 2), new TopicPartition("zoo", 3))),
             changes.deletes()
         );
         assertEquals(
-            new HashSet<>(Arrays.asList(new TopicPartition("zoo", 0), new TopicPartition("zoo", 4))),
+            new HashSet<>(List.of(new TopicPartition("zoo", 0), new TopicPartition("zoo", 4))),
             changes.electedLeaders().keySet()
         );
         assertEquals(
-            new HashSet<>(Arrays.asList(new TopicPartition("zoo", 0), new TopicPartition("zoo", 4))),
+            new HashSet<>(List.of(new TopicPartition("zoo", 0), new TopicPartition("zoo", 4))),
             changes.leaders().keySet()
         );
         assertEquals(
-            new HashSet<>(Arrays.asList(new TopicPartition("zoo", 1), new TopicPartition("zoo", 5))),
+            new HashSet<>(List.of(new TopicPartition("zoo", 1), new TopicPartition("zoo", 5))),
             changes.followers().keySet()
         );
 
@@ -595,7 +595,7 @@ public class TopicsImageTest {
 
     private static List<ApiMessageAndVersion> getImageRecords(TopicsImage image) {
         RecordListWriter writer = new RecordListWriter();
-        image.write(writer, new ImageWriterOptions.Builder().build());
+        image.write(writer, new ImageWriterOptions.Builder(MetadataVersion.latestProduction()).build());
         return writer.records();
     }
 
@@ -610,7 +610,7 @@ public class TopicsImageTest {
         assertNull(map.get("baz"));
         HashSet<Uuid> uuids = new HashSet<>();
         map.values().iterator().forEachRemaining(uuids::add);
-        HashSet<Uuid> expectedUuids = new HashSet<>(Arrays.asList(
+        HashSet<Uuid> expectedUuids = new HashSet<>(List.of(
             Uuid.fromString("ThIaNwRnSM2Nt9Mx1v0RvA"),
             Uuid.fromString("f62ptyETTjet8SL5ZeREiw")));
         assertEquals(expectedUuids, uuids);
@@ -629,7 +629,7 @@ public class TopicsImageTest {
         assertNull(map.get(BAZ_UUID));
         HashSet<String> names = new HashSet<>();
         map.values().iterator().forEachRemaining(names::add);
-        HashSet<String> expectedNames = new HashSet<>(Arrays.asList("foo", "bar"));
+        HashSet<String> expectedNames = new HashSet<>(List.of("foo", "bar"));
         assertEquals(expectedNames, names);
         assertThrows(UnsupportedOperationException.class, () -> map.remove(FOO_UUID));
         assertThrows(UnsupportedOperationException.class, () -> map.put(FOO_UUID, "bar"));
